--- a/package.json
+++ b/package.json
@@ -17,5 +17,6 @@
   },
   "dependencies": {
     "html-webpack-plugin": "^5.6.0"
-  }
+  },
+  "scripts": { "deploy": "git subtree push --prefix dist origin gh-pages" }
 }
